--- a/src/styles/solution.css
+++ b/src/styles/solution.css
@@ -291,5 +291,125 @@ p {
     }
   }
 }
+
+/* ===== Seção de Planos ===== */
+#pricing {
+  display: flex;
+  flex-direction: column;
+  padding-block: 4rem;
+  gap: 2rem;
+}
+
+/* Header do Pricing */
+#pricing header {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  align-items: center;
+}
+
+#pricing header :first-child {
+  color: var(--primary-color);
+  font-weight: var(--fw-bold);
+}
+
+/* Colunas de Cartões */
+.even-columns {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  justify-content: center;
+}
+
+/* Cartão de Preço */
+.pricing-card {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  align-self: center;
+  height: min-content;
+  padding: 1.5rem 1.5rem 3rem 1.5rem;
+  background-color: var(--light-gray);
+  border-radius: 1.5rem;
+  box-shadow: rgba(58, 68, 78, 0.2) 0px 12px 24px;
+}
+
+/* Cartão Premium com destaque */
+.premium {
+  border: solid 0.2rem var(--primary-color);
+  padding: 0rem 1.5rem 3rem 1.5rem;
+}
+
+.premium .plan > h3 {
+  color: var(--primary-color);
+}
+
+/* Faixa de bônus no Premium */
+.bonus {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--primary-color);
+  width: 65%;
+  height: 2.5rem;
+  align-self: center;
+  border-bottom-left-radius: 1.5rem;
+  border-bottom-right-radius: 1.5rem;
+}
+
+.bonus p {
+  font-size: 12px;
+  font-weight: var(--fw-md);
+  color: var(--light-text-color);
+}
+
+/* Preço */
+.price {
+  display: flex;
+  align-items: end;
+}
+
+.price p {
+  margin-left: 8px;
+  padding-bottom: 4px;
+}
+
+/* Linhas horizontais entre seções */
+.hr {
+  height: 1.5px;
+  background-color: var(--primary-color);
+  margin-block: 0.725rem;
+}
+
+/* Lista de benefícios */
+.features {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
+.features p {
+  margin: 0;
+}
+
+/* Título e descrição do plano */
+.plan {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+/* Responsividade */
+@media (width >= 1280px) {
+  #pricing {
+    gap: 5rem;
+    padding-block: 5rem;
+  }
+
+  h3 {
+    font-size: 1.25rem;
+  }
+}
+
     
 }
