Fim da página e adição de fotos no carrossel

--- a/src/styles/solution.css
+++ b/src/styles/solution.css
@@ -209,6 +209,7 @@ p {
 .carousel {
   display: flex;
   width: 80%;
+  overflow-x: hidden;
 }
 
 .carousel:hover {
@@ -263,7 +264,7 @@ p {
     transform: translateX(0);
   }
   100% {
-    transform: translateX(-100%);
+    transform: translateX(-50%);
   }
 }
 
